# markuplift

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/notes/: empty-element-rendering-architecture.md
experiments/: manual_tag_scanner.py  sax_position_tracking.py  svg_serialization_strategies.py  svg_serialization_test.html  verify_html_case_preservation.py
scripts/: README.md.j2  generate_readme.py
src/examples/: __init__.py  attribute_formatters.py  cdata_example.py  complex_predicates.py  complex_predicates_usage.py  css_class_predicates.py  derive_example.py  namespace_example.py  python_api_basic.py  real_world_article.py  xml_document_formatting.py
src/markuplift/: __init__.py  __main__.py  annotation.py  attribute_formatting.py  cli.py  doctype.py  document_formatter.py  empty_element.py  escaping.py  formatter.py  html5_formatter.py  namespace.py  parsing.py  predicates.py  source_locator.py  types.py  utilities.py  xml_formatter.py
tests/: TestCLIDemo.test_cli_demo_execution.approved.txt  TestReadmeExamples.test_advanced_form_example.approved.txt  TestReadmeExamples.test_attribute_formatting_example.approved.txt  TestReadmeExamples.test_complex_predicates_example.approved.txt  TestReadmeExamples.test_custom_css_class_predicate_example.approved.txt  TestReadmeExamples.test_namespace_mixed_example.approved.txt  TestReadmeExamples.test_python_api_nested_list_example.approved.txt  TestReadmeExamples.test_real_world_article_example.approved.txt  TestReadmeExamples.test_xml_document_formatting_example.approved.txt  conftest.py  test_annotate_element_in_mixed_content_as_inline.py  test_annotate_explicit_block_elements.py  test_annotate_explicit_inline_elements.py  test_annotate_explicit_whitespace_normalizing_elements.py  test_annotate_explicit_whitespace_preserving_elements.py  test_annotate_inline_descendants_as_inline.py  test_annotate_unmixed_block_descendants_as_block.py  test_annotate_whitespace_preserving_descendants_as_whitespace_preserving.py  test_annotate_xml_space.py  test_attribute_formatting.py  test_attribute_ordering.py  test_attribute_strategy_pattern.py  test_attribute_value_formatting.py  test_cdata_integration.py  test_cdata_rendering.py  test_cdata_support.py  test_cli.py  test_cli_demo.py  test_comments.py  test_derive.py  test_doctype.py  test_doctype_strategies.py  test_empty_element_strategies.py  test_escaping_strategies.py  test_formatter.py  test_formatter_factories.py  test_formatter_from_compact.py  test_formatter_from_indented.py  test_formatter_with_whitespace_normalization.py  test_function_matchers.py  (+28 more)
tests/data/: html_with_svg.html  html_with_svg_NEWLY_FORMATTED.html  html_with_svg_too_little_indentation.html  messy_html_page.html  messy_xml_chunked_content.xml
tests/data/cli_examples/: messy_article.html  messy_config.xml
tests/data/readme_examples/: article_example.html  attribute_formatting_example.html  complex_predicates_example.html  css_class_example.html  documentation_example.html  form_example.html  namespace_mixed_example.xml  xml_document_example.xml
tests/helpers/: predicates.py
tests/predicates/: test_combinators.py  test_has_attribute.py  test_html_normalize_whitespace.py  test_matches_xpath.py  test_node_types.py  test_tag_equals.py  test_tag_in.py  test_validation.py
