[project]
name = "markuplift"
version = "0.1.0"
description = "A configurable XML and HTML formatter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "lxml>=6.0.1",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[dependency-groups]
lint = [
    "ruff>=0.7.0",
]
doc = [
    "added-value>=0.24.0",
    "better-apidoc>=0.3.2",
    "python-dotenv>=1.0.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-visning",
    "sphinx_rtd_theme>=1.2.2",
    "sphinxcontrib-plantuml>=0.30",
    "sphinxcontrib-programoutput>=0.18",
]
test = [
    "approvaltests>=15.3.2",
    "hypothesis>=6.92.2",
    "pytest>=8.4.1",
]
dev = [
    "bump-my-version>=0.28.0",
    {include-group = "doc"},
    {include-group = "test"},
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
